Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: Qt Creator 6.0.0-beta1, Qt Creator 6.0.0-beta2, Qt Creator 6.0.0-rc1, Qt Creator 6.0.0
-
Fix Version/s: Qt Creator 6.0.1
-
Component/s: Editors
-
Labels:None
-
Platform/s:
-
Commits:02d6dfdfec09ca3c5e39df0e01c20896f6a50431 (qt-creator/qt-creator/6.0)
Description
Since version 6, shortcut to delete word previous to cursor (ctrl+backspace) doesn't work and shortcut does nothing
Attachments
For Gerrit Dashboard: QTCREATORBUG-26646 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
384551,2 | TextEditor: fix delete(Start/End)OfWord without camelcase | 6.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |