TextEditor: fix delete(Start/End)OfWord without camelcase

Fixes: QTCREATORBUG-26646
Change-Id: I0f9a4ad56ef96632fbf5de490f089bf7ff3b12ee
Reviewed-by: Christian Stenger <christian.stenger@qt.io>